# sqlalchemy-boolean-search

./: .bumpversion.cfg  .travis.yml  AUTHORS.txt  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  runtests.sh  setup.cfg  setup.py  sqlalchemy_boolean_search.py  tasks.py  tox.ini
tests/: app.sqlite  conftest.py  test_boolean_expressions.py  test_field_names.py  test_strings.py
