[metadata]
name = marvin-sqlalchemy-boolean-search
version = 0.2.2
author = Brian Cherinka
author_email = bcherinka@stsci.edu
description = Boolean search expression parser for SQLAlchemy
url = http://github.com/havok2063/SQLAlchemy-boolean-search
project_urls =
	Repository = http://github.com/havok2063/SQLAlchemy-boolean-search
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Boolean search Flask SQLAlchemy
license = BSD 3-Clause License
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=2.7
include_package_data = True,
py_modules = sqlalchemy_boolean_search
install_requires =
	pyparsing>=2.4,<3.0
    sqlalchemy>=1.3,<1.4

[options.extras_require]
dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-cov>=2.8.1
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
    Flask>=1.0
    Flask-SQLAlchemy>=1.0
    pytest-flask>=0.8.1
docs =
	Sphinx>=2.1.0,<4.0

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = sqlalchemy_boolean_search
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[bdist_wheel]
universal = 1

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov sqlalchemy_boolean_search --cov-report html -W ignore

[coverage:run]
branch = true
include =
	sqlalchemy_boolean_search
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =


